<resources>
    <string name="app_name">Football Stats Keeper</string>

    <string name="header">Live Stats</string>
    <string name="subheader_team_A">Home Team</string>
    <string name="subheader_team_B">Away Team</string>
    <string name="goal_scored_button">Scored</string>
    <string name="goals_label">Goals</string>
    <string name="foul_committed_button">Foul</string>
    <string name="fouls_label">Fouls</string>
    <string name="corner_won_button">Corner Won</string>
    <string name="corners_label">Corners</string>
    <string name="reset_button">Reset</string>
</resources>
